fix: updateCar handler
